syntax = "proto3";
package modelingEvolution.directConnect.grpc;

import "google/protobuf/duration.proto";  
import "google/protobuf/timestamp.proto";
import "google/protobuf/wrappers.proto";
import "google/protobuf/empty.proto";

service RequestController{
	rpc SendVoid(ObjectEvenlope) returns (Reply);
	rpc Send(ObjectEvenlope) returns (Reply);
	rpc Steam(stream ObjectEvenlope) returns (Reply);
}

service BlobController {
	rpc Download(ObjectEvenlope) returns (stream DownloadReply);
}

message DownloadReply {
	oneof Payload{
		ObjectEvenlope metadata = 1;
		ObjectEvenlope fault = 3;
		bytes data = 2;
	}
}
message BlobControlMsg{

}

message Reply{
	oneof Payload {
		ObjectEvenlope object = 1;
		ArrayEnvelope array = 2;
		ObjectEvenlope fault = 3;
		google.protobuf.Empty empty = 4;
	}
}
message ArrayEnvelope{
	repeated ObjectEvenlope Items = 1;
}
message ObjectEvenlope {
	bytes messageId = 1;
	bytes data = 2;
}
